@@ -1,3 +1,14 @@
+2007-02-08  Jakub Jelinek  <jakub@redhat.com>
+
+	[BZ #3944]
+	* time/strptime_l.c (__strptime_internal): Set have_mon for
+	%b/%B/%h.  Set have_mon and have_mday if tm_mon and tm_mday
+	have been computed from tm_yday and tm_year.  Don't crash
+	in day_of_the_week or day_of_the_year if not have_mon
+	and tm_mon contains bogus value.
+	* time/Makefile (tests): Add tst-strptime3.
+	* time/tst-strptime3.c: New test.
+
 2007-02-05  Jakub Jelinek  <jakub@redhat.com>
 
 	[BZ #3957]
